--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">#F2FF3D00</item>
+        <item name="android:statusBarColor">#FF3D00</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
